--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,11 @@
 {
   "extends": "airbnb",
   "rules": {
-    "max-len": 0,
+    "max-len": [2, 120],
     "func-names": "off",
-    "indent": 0,
+    "indent": [2, 4],
     "nonblock-statement-body-position": "off",
-    "curly": 0
+    "curly": 0,
+    "consistent-return": 0
   }
 }
